@@ -1,4 +1,6 @@
 2005-04-26 François Proulx <francois.proulx@gmail.com>
+	* stylesheet rework
+2005-04-26 François Proulx <francois.proulx@gmail.com>
 	* Fixed wrong location for change password link
 2005-04-25 François Proulx <francois.proulx@gmail.com>
 	* Portal page styling
